@@ -4864,6 +4864,9 @@
                             <para>Fixed problem with opening dirs by intviewer</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed problem with editing dirs by gcmd</para>
+                        </listitem>
+                        <listitem>
                             <para>Build fixes</para>
                         </listitem>
                     </itemizedlist>
