@@ -2298,29 +2298,32 @@ gnome_cmd_file_list_cap_copy (GnomeCmdFileList *fl)
 void
 gnome_cmd_file_list_view (GnomeCmdFileList *fl, gint internal_viewer)
 {
-    GnomeCmdFile *finfo;
-
     g_return_if_fail (GNOME_CMD_IS_FILE_LIST (fl));
 
-    finfo = gnome_cmd_file_list_get_selected_file (fl);
+    GnomeCmdFile *finfo = gnome_cmd_file_list_get_selected_file (fl);
 
-    if (finfo)
-        if (finfo->info->type != GNOME_VFS_FILE_TYPE_DIRECTORY)
-            gnome_cmd_file_view (finfo, internal_viewer!=-1 ? internal_viewer : 
-                                                              gnome_cmd_data_get_use_internal_viewer ());
+    if (!finfo)  return;
+
+    if (finfo->info->type == GNOME_VFS_FILE_TYPE_DIRECTORY)
+        create_error_dialog(_("Not an ordinary file: %s"), finfo->info->name);
+    else
+        gnome_cmd_file_view (finfo, internal_viewer!=-1 ? internal_viewer : 
+                                                          gnome_cmd_data_get_use_internal_viewer ());
 }
 
 
 void
 gnome_cmd_file_list_edit (GnomeCmdFileList *fl)
 {
-    GnomeCmdFile *finfo;
-
     g_return_if_fail (GNOME_CMD_IS_FILE_LIST (fl));
 
-    finfo = gnome_cmd_file_list_get_selected_file (fl);
+    GnomeCmdFile *finfo = gnome_cmd_file_list_get_selected_file (fl);
 
-    if (finfo)
+    if (!finfo)  return;
+
+    if (finfo->info->type == GNOME_VFS_FILE_TYPE_DIRECTORY)
+        create_error_dialog(_("Not an ordinary file: %s"), finfo->info->name);
+    else
         gnome_cmd_file_edit (finfo);
 }
 
