@@ -1,3 +1,8 @@
+2006-12-18  Koos Jan Niesink  <kjniesink@yahoo.co.uk>
+
+	* src/gnome-cmd-file-list.c:
+	Prevent gcmd from editing dirs
+
 2006-12-18  Henry Yonathan <henry.yonathan@gmail.com>
 
 	* src/gnome-cmd-main-win.c:
